Details
-
Bug
-
Status: Closed
-
Major
-
Resolution: Fixed
-
None
-
None
-
Patch Available
Description
Essentially fix for https://issues.apache.org/jira/browse/THRIFT-2905 and PR #652.
Given something like this:
void someRpcCall(1:map<SomeEnum, AnotherEnum> param);
Cocoa compiler produces corrupt implementation.
- (BOOL) someRpcCall:(NSDictionary< , > *) param error: (NSError *__autoreleasing *)__thriftError;
This fixes it so code rendered properly, boxing enums into NSNumber*.
Attachments
Issue Links
- links to