Cocoa compiler: fixed incorrect boxing of enums inside map. #THRIFT-3395